# Pattern-Recognition-and-Image-Reader

./: CMakeLists.txt  ImageReader.cpp  ImageReader.h  Matrix.h  PatternRecognition.cpp  PatternRecognition.h  PatternRecognition1D.h  PatternRecognition2D.h  README.md  Sequence.cpp  Sequence.h  Utils.h  Vector.h  main.cpp  mainImageReader.cpp  mainImageReaderAndPatternRecognition.cpp  mainPatternRecognition.cpp
C++ src/: CMakeLists.txt  ImageReader.h  Utils.h  mainFull.cpp  mainIM.cpp  mainPR.cpp
CUDA src/: PatternRecognition.cu  PatternRecognition.h  Utils.h  main.cpp
